sticky header, js added, .sticky added to css, sticky header works on large mqueries, stays fixed on small to medium mediaq

--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ body {
 h1.bannerHeader  {
     font-size: 45px;
     color: #f5f5f5;
-    text-shadow: 2px 2px 3px black;
-    z-index: 1;
+    text-shadow: 2px 2px 3px black; 
 }
 
 
@@ -63,6 +62,7 @@ a.para-link {
     margin-bottom: 1em;
     opacity: .8;
     box-shadow: 0px 7px 12px 2px #0000004a;
+    z-index: 1;
     }
 
 
@@ -103,8 +103,19 @@ a.para-link {
     padding-bottom: 40px; 
     overflow: hidden;
     background-color: #7d5425;
-    position: -webkit-sticky;
-    position: sticky;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+       margin: auto;
+       padding-top: 10px;
+       padding-bottom: 40px;
+       overflow: hidden;
+       background-color: #7d5425;
+       z-index: 1;
+       
 }
 
 button {
